add an allotment query endpoint
